--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Andrew Nesbitt <andrewnez@gmail.com> (http://andrew.github.com)",
   "name": "node-sass",
   "description": "wrapper around libsass",
-  "version": "0.3.0",
+  "version": "0.3.0-disqus1",
   "homepage": "https://github.com/andrew/node-sass",
   "keywords": ["sass", "css", "libsass"],
   "bugs" :
